--- a/package.json
+++ b/package.json
@@ -15,5 +15,14 @@
   "bugs": {
     "url": "https://github.com/dannybster/ReactReduxMediumArticle/issues"
   },
-  "homepage": "https://github.com/dannybster/ReactReduxMediumArticle#readme"
+  "homepage": "https://github.com/dannybster/ReactReduxMediumArticle#readme",
+  "dependencies": {
+    "material-ui": "^1.0.0-beta.35",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "1.1.1",
+    "redux": "^3.7.2"
+  }
 }
